hphp/hack/test/typecheck/call_fty_any.php.exp
File "call_fty_any.php", line 10, characters 5-9:
Was expecting an array or collection but type is unknown (Typing[4297])
File "call_fty_any.php", line 8, characters 10-18:
It is unknown because type parameter T of HH\Vector could not be determined. Please add explicit type parameters to the invocation of HH\Vector
